--- a/scanner/admin.html
+++ b/scanner/admin.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
-<HTML>
-<HEAD>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nowhere Entry</title>
-    <meta name="description" content="Nowhere Entry" />
-    <link rel="stylesheet" href="/css/beep_test.css" />
-    <script src="/js/jquery.min.js"></script>
-</HEAD>
-<BODY>
+<html>
 
-<DIV ID='maindiv'>
-  <DIV ID='mdiv' CLASS='eebody white'>
-  </DIV>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nowhere Entry</title>
+  <meta name="description" content="Nowhere Entry" />
+  <link rel="stylesheet" href="/css/beep_test.css" />
+  <script src="/js/jquery.min.js"></script>
+</head>
 
-<DIV CLASS='hidden' ID='spinspin'>
-  <DIV CLASS='loader'></DIV>
-  </DIV>
-</DIV>
+<body>
 
-<DIV CLASS='flush'>
-  <DIV ID='fqc' CLASS='flushtext'>Flush cache</DIV>
-</DIV>
+  <div id='maindiv'>
+    <div id='mdiv' class='eebody white'>
+    </div>
 
-<script src="/js/beep_admin.js"></script>
-</BODY>
-</HTML>
+    <div class='hidden' id='spinspin'>
+      <div class='loader'></div>
+    </div>
+  </div>
+
+  <div class='flush'>
+    <div id='fqc' CLASS='flushtext'>Flush cache</div>
+  </div>
+
+  <script src="/js/beep_admin.js"></script>
+</body>
+
+</html>
