--- a/scanner/index.html
+++ b/scanner/index.html
@@ -1,77 +1,89 @@
 <!DOCTYPE html>
-<HTML>
-<HEAD>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nowhere Entry</title>
-    <meta name="description" content="Nowhere Entry" />
-    <link rel="stylesheet" href="/css/beep.css" />
-    <script src="/js/jquery.min.js"></script>
-</HEAD>
-<BODY>
+<html>
 
-<DIV ID='maindiv'>
-  <DIV ID='mdiv' CLASS='eebody white'>
-    <DIV ID='scanpage' CLASS='infoblock'>
-      <DIV CLASS='headercontainer'>
-        <DIV CLASS='txtheader'>Scan barcode</DIV>
-      </DIV>
-      <DIV CLASS='bcodeinput'><INPUT TYPE='text' ID='bcode'></DIV>
-    </DIV>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nowhere Entry</title>
+  <meta name="description" content="Nowhere Entry" />
+  <link rel="stylesheet" href="/css/beep.css" />
+</head>
 
-    <DIV ID='idcheck' CLASS='hidden'>
-      <DIV CLASS='txtblock'>
-	<DIV CLASS='headercontainer'>
-          <DIV CLASS='txtheader'>Name</DIV>
-	</DIV>
-	<DIV CLASS='txttxt' ID='idname'>Bob Smith</DIV>
-      </DIV>
+<body>
 
-      <DIV ID='xxcheck' CLASS='hidden'>
-	<DIV CLASS='headercontainer'>
-          <DIV CLASS='txtheader'>Extra check</DIV>
-	</DIV>
-	<DIV CLASS='txttxt' ID='extra_check'>This is a non-standard ticket which requires extra checking!</DIV>
-      </DIV>
+  <div id='maindiv'>
+    <div id='mdiv' class='eebody white'>
+      <div id='scanpage' class='infoblock'>
+        <div class='headercontainer'>
+          <div class='txtheader'>Scan barcode</div>
+        </div>
+        <div class='bcodeinput'>
+          <input type='text' id='bcode'>
+        </div>
+      </div>
 
-      <DIV CLASS='txtblock'>
-	<DIV CLASS='headercontainer'>
-          <DIV CLASS='txtheader'>ID</DIV>
-	</DIV>
-	<DIV CLASS='txttxt' ID='idid'>A123455234CY</DIV>
-      </DIV>
+      <div id='idcheck' class='hidden'>
+        <div class='txtblock'>
+          <div class='headercontainer'>
+            <div class='txtheader'>Name</div>
+          </div>
+          <div class='txttxt' id='idname'>Bob Smith</div>
+        </div>
 
-      <DIV CLASS='txtblock'>
-	<DIV CLASS='txtinfo'>Verify name and ID against documents and then scan barcode again. If the name and ID don't match, just hit enter.</DIV>
-	<INPUT TYPE='hidden' ID='current_bcode' NAME='cbc' VALUE=''>
-        <DIV CLASS='bcodeinput'><INPUT TYPE='text' ID='verifybcode'></DIV>
-      </DIV>
-    </DIV>
+        <div id='xxcheck' class='hidden'>
+          <div class='headercontainer'>
+            <div class='txtheader'>Extra check</div>
+          </div>
+          <div class='txttxt' id='extra_check'>
+            This is a non-standard ticket which requires extra checking!
+          </div>
+        </div>
 
-    <DIV ID='errordiv' CLASS='hidden'>
-    <DIV CLASS='infoblock'>
-      <DIV CLASS='headercontainer'>
-        <DIV CLASS='txtheader'>Error</DIV>
-      </DIV>
-      <DIV CLASS='txttxt' ID='errorclass'>Something went wrong!</DIV>
-    </DIV>
-    <DIV CLASS='infoblock'>
-      <DIV CLASS='headercontainer'>
-        <DIV CLASS='txtheader'>Solution</DIV>
-      </DIV>
-      <DIV CLASS='txttxt' ID='errorsolution'>Panic and run round with your hands in the air!</DIV>
-    </DIV>
-  </DIV>
-</DIV>
+        <div class='txtblock'>
+          <div class='headercontainer'>
+            <div class='txtheader'>ID</div>
+          </div>
+          <div class='txttxt' id='idid'>A123455234CY</div>
+        </div>
 
-<DIV CLASS='flush'>
-  <DIV ID='fqc' CLASS='flushtext'>Flush cache</DIV>
-</DIV>
+        <div class='txtblock'>
+          <div class='txtinfo'>
+            Verify name and ID against documents and then scan barcode again. If the name
+            and ID don't match, just hit enter.
+          </div>
+          <input type='hidden' id='current_bcode' name='cbc' value=''>
+          <div class='bcodeinput'><input type='text' id='verifybcode'></div>
+        </div>
+      </div>
 
-<DIV CLASS='hidden' ID='spinspin'>
-  <DIV CLASS='loader'></DIV>
-</DIV>
-<script src="/js/beep.js"></script>
+      <div id='errordiv' class='hidden'>
+        <div class='infoblock'>
+          <div class='headercontainer'>
+            <div class='txtheader'>Error</div>
+          </div>
+          <div class='txttxt' id='errorclass'>Something went wrong!</div>
+        </div>
+        <div class='infoblock'>
+          <div class='headercontainer'>
+            <div class='txtheader'>Solution</div>
+          </div>
+          <div class='txttxt' id='errorsolution'>Panic and run round with your hands in the air!</div>
+        </div>
+      </div>
+    </div>
 
-</BODY>
-</HTML>
+    <div class='flush'>
+      <div id='fqc' class='flushtext'>Flush cache</div>
+    </div>
+
+    <div class='hidden' id='spinspin'>
+      <div class='loader'></div>
+    </div>
+  </div>
+
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/beep.js"></script>
+
+</body>
+
+</html>
