--- a/scanner/index.html
+++ b/scanner/index.html
@@ -81,8 +81,9 @@
     </div>
   </div>
 
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/beep.js"></script>
+  <script src="/js/jquery/dist/jquery.min.js"></script>
+  <script src="/js/html5-qrcode/html5-qrcode.min.js"></script>
+  <script src="/beep.js"></script>
 
 </body>
 
