Add barcode scanner

--- a/scanner/index.html
+++ b/scanner/index.html
@@ -18,8 +18,7 @@
           <div class='txtheader'>Scan barcode</div>
         </div>
 
-        <!-- Barcode reader -->
-        <div style="width: 80%" id="reader"></div>
+        <div style="width: 100%" id="barcode_scanner"></div>
 
         <div class='bcodeinput'>
           <input type='text' id='bcode'>
@@ -86,6 +85,7 @@
   </div>
 
   <script src="/js/jquery.min.js"></script>
+  <script src="/js/html5-qrcode.min.js"></script>
   <script src="/js/beep.js"></script>
 
 </body>
