Add barcode scanner

--- a/scanner/index.html
+++ b/scanner/index.html
@@ -17,6 +17,9 @@
         <div class='headercontainer'>
           <div class='txtheader'>Scan barcode</div>
         </div>
+
+        <div style="width: 100%" id="barcode_scanner"></div>
+
         <div class='bcodeinput'>
           <input type='text' id='bcode'>
         </div>
