DEV HACK: no accidental API hits

--- a/scanner/index.html
+++ b/scanner/index.html
@@ -17,6 +17,10 @@
         <div class='headercontainer'>
           <div class='txtheader'>Scan barcode</div>
         </div>
+
+        <!-- Barcode reader -->
+        <div style="width: 80%" id="reader"></div>
+
         <div class='bcodeinput'>
           <input type='text' id='bcode'>
         </div>
