--- a/scanner/index.html
+++ b/scanner/index.html
@@ -89,6 +89,9 @@
     </div>
   </div>
 
+  <!-- capture docker env vars via nginx entrypoint -->
+  <script src="/js/env.js"></script>
+
   <script src="/js/jquery/dist/jquery.min.js"></script>
   <script src="/js/html5-qrcode/html5-qrcode.min.js"></script>
   <script src="/beep.js"></script>
